python notebook finalized

--- a/notebooks/01_analysis.ipynb
+++ b/notebooks/01_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "id": "f2b62446-ac15-418d-a58b-ea1f16603cd8",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "id": "506b3677-e8d2-4fdd-8c19-47cef4ce2ea2",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "id": "8bf0b5b1-272b-4831-a60d-b188847ec38f",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "id": "2410990d-a7bf-4149-ad28-b82094fb3d8a",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
+   "id": "03b8c9bc-ca5c-4f73-9712-281e55e6b555",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Harcama, diğerlerinin çok üzerinde bir şekilde öne çıkan La Verne'de yoğunlaşmıştır. La Verne ile ikinci büyük şehir Monterey Park arasındaki fark oldukça büyüktür ve bu da oldukça yerel bir harcama modeline işaret etmektedir."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "4c9e0542-bd80-44ed-8c58-72ddc6538d3f",
    "metadata": {},
    "outputs": [
@@ -117,7 +127,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
+   "id": "f04f4cae-e086-4887-9a50-6de4fc7bc7f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#En yüksek harcama hacmi sabah 6 civarında belirgin bir şekilde gerçekleşiyor ve bu da o saatte belirli bir tekrarlayan aktivite veya satın alma davranışına işaret ediyor. Ayrıca, öğle ve akşam alışveriş saatlerine denk gelebilecek 13:00 ve 20:00 saatlerinde de fark edilebilir ancak daha küçük zirveler mevcut."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "id": "c4676994-4fc7-41b1-90b7-3e0fb4d82369",
    "metadata": {},
    "outputs": [
@@ -144,7 +164,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
+   "id": "64982d0e-c797-4fda-9060-6c7ab6217cba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Kadın müşterilerin toplam harcamaları erkek müşterilere kıyasla biraz daha yüksektir. Aradaki fark çok büyük olmasa da, kadınların genel satışlara biraz daha fazla katkıda bulunabileceğini düşündürecek kadar tutarlıdır."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "id": "58c892f2-5e2d-447b-bbda-5843a2ca5265",
    "metadata": {},
    "outputs": [
@@ -170,7 +200,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
+   "id": "414844d5-1ac0-49ae-9893-4509c49369d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Dağınıklık grafiği, gelir ve harcama arasında güçlü bir doğrusal ilişki göstermemektedir. Farklı gelir seviyelerindeki insanlar, harcama miktarlarında geniş bir yelpazede değişiklik göstermektedir; bu da harcama alışkanlıklarının yalnızca gelirden değil, diğer faktörlerden de etkilendiğini göstermektedir."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "id": "9588963a-7826-4a35-b9c1-2ec8a8cdb417",
    "metadata": {},
    "outputs": [
@@ -200,7 +240,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
+   "id": "8b0e5e2e-0592-4805-93a5-96de1b5f4eb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Yıllık 25-50 bin gelir grubu toplam harcamada başı çekerken, onu 50-100 bin gelir grubu takip ediyor. En düşük ve en yüksek gelir grupları genel olarak daha az katkıda bulunuyor; bu da orta gelirli bireylerin bu veri setinde en aktif harcama yapanlar olduğu anlamına gelebilir."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "id": "b563d61b-53d0-49e9-b7a2-ea7e8a1ec11e",
    "metadata": {},
    "outputs": [
@@ -215,7 +265,7 @@
        " 'Şekiller klasörü': 'C:\\\\Users\\\\Efee\\\\Desktop\\\\spend-analysis\\\\patika-spend-analysis\\\\reports\\\\figures'}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
